# qibot

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  NOTICE.md  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_CERTIFICATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  prettier.json  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
assets/data/: characters.json
cogs/: member_events.py  salutations.py
lib/: channels.py  characters.py  common.py  embeds.py  images.py  logger.py  registry.py
qibot/: __init__.py  __main__.py  bot.py  cli.py  meta.py
qibot/assets/: __init__.py  paths.py
qibot/assets/data/: characters.json
qibot/characters/: core.py  greeter.py  overseer.py
qibot/cli/: __init__.py  colors.py  main.py  tokens.py  utils.py
qibot/cogs/: __init__.py
qibot/embeds/: __init__.py  builders.py  fielddata.py  fields.py  images.py  text.py
qibot/utils/: __init__.py  bot.py  channels.py  config.py  json.py  logging.py  templates.py
src/: main.py  qibot.py
src/assets/data/: characters.json
src/assets/images/: profile_icons.xcf
src/cogs/: member_events.py  members.py
src/lib/: channels.py  characters.py  common.py  embeds.py  images.py  logger.py  registry.py
src/lib/characters/: __init__.py  core.py  greeter.py  internal.py  overseer.py  reporter.py
src/lib/embeds/: __init__.py  builders.py  core.py  fields.py  images.py  text.py
src/lib/utils/: __init__.py  bot.py  botconfig.py  channels.py  config.py  images.py  json.py  logger.py  misc.py
src/qibot/characters/: __init__.py  core.py  reporter.py
src/qibot/cogs/: __init__.py  members.py
src/qibot/embeds/: core.py  fielddata.py  images.py
src/qibot/utils/: __init__.py  bot.py  images.py  json.py  misc.py
