[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qibot"
description = "A Discord bot with a Stardew Valley theme."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.scripts]
qibot = "qibot.bot:main"

[project.urls]
"Homepage" = "https://github.com/nuztalgia/qibot"
"Issue Tracker" = "https://github.com/nuztalgia/qibot/issues"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.setuptools.dynamic]
version = { attr = "qibot.VERSION" }
